--- a/user_configs/main_config copy.json
+++ b/user_configs/main_config copy.json
@@ -78,7 +78,7 @@
     "perform_modification": true,
     "modify_config": {
       "base_idf_path": "output/output_IDFs/building_0.idf",
-      "idd_path": "D:/EnergyPlus/Energy+.idd",
+      "idd_path": "EnergyPlus/Energy+.idd",
       "assigned_csv": {
 
         "hvac_building": "output/assigned/assigned_hvac_building.csv",
