--- a/ZZZz/Untitled-2.ini
+++ b/ZZZz/Untitled-2.ini
@@ -1,5 +1,5 @@
 
-
+changes: json combined and splitter
 
 
 Below is a **textual summary** of the workflow describing the loop from initial data through calibration, re-runs, and analysis:
@@ -17,13 +17,16 @@ D:\Documents\E_Plus_2030_py\user_configs\hvac.json
 D:\Documents\E_Plus_2030_py\user_configs\lighting.json
 D:\Documents\E_Plus_2030_py\user_configs\shading.json
 D:\Documents\E_Plus_2030_py\user_configs\vent.json
-a. The Excel overrides are applied first. 
-b. The user config “partial” overrides (from .json) come next, overriding or setting ranges for specific buildings, scenarios, or parameters. 
-c. The final picks (whether random or fixed) get logged in the assigned_fenez_params.csv with the correct “range used” or “fixed value” notation. then the final assigned and range values to be saved in csv
-
-
 this config is also that for all process:
 D:\Documents\E_Plus_2030_py\user_configs\main_config.json
+
+
+b. The user config “partial” overrides (from .json) come next, overriding or setting ranges for specific buildings, scenarios, or parameters. 
+c. The final picks (whether random or fixed) get logged in the assigned_fenez_params.csv with the correct “range used” or “fixed value” notation. 
+then the final assigned and range values to be saved in csv
+
+
+
 
 
 
