--- a/.env
+++ b/.env
@@ -1,20 +1,13 @@
-# ==============================
-# ENERGYPLUS CONFIGS
-# ==============================
-IDDFILE=/usr/local/EnergyPlus-22.2.0-c249759bad-Linux-Ubuntu20.04-x86_64/Energy+.idd
-IDFFILE=/app/data/Minimal.idf
-EPWFILE=/app/data/weather/NLD_Amsterdam.062400_IWEC.epw
-OUTPUT_DIR=/app/output
-ENERGYPLUS_INSTALLATION_DIR=EnergyPlus-22.2.0-c249759bad-Linux-Ubuntu20.04-x86_64
+# .env
+IDD_PATH=/usr/local/EnergyPlus-22.2.0/Energy+.idd
+BASE_IDF_PATH=/usr/src/app/data/Minimal.idf
+EPWFILE=/usr/src/app/data/weather/2020.epw
+OUTPUT_DIR=/usr/src/app/output
 
-# ==============================
-# DATABASE CONFIGS
-# ==============================
 DB_NAME=research
 DB_USER=postgres
 DB_PASSWORD=mypassword
-DB_HOST=leda.geodan.nl
+DB_HOST=db
 DB_PORT=5432
-
 
 ENERGYPLUS_VERSION=22.2.0
