--- a/user_configs/903125a4-9c25-4639-ba16-f6fdbc015086/main_config.json
+++ b/user_configs/903125a4-9c25-4639-ba16-f6fdbc015086/main_config.json
@@ -1,136 +1,4 @@
 {
-  "dhw": [
-    {
-      "building_id": 413673000,
-      "param_name": "occupant_density_m2_per_person",
-      "min_val": 127.0,
-      "max_val": 233.0
-    },
-    {
-      "building_id": 413673000,
-      "param_name": "liters_per_person_per_day",
-      "fixed_value": 145.0
-    },
-    {
-      "building_function": "residential00",
-      "age_range": "1992-2005",
-      "param_name": "setpoint_c",
-      "min_val": 58.0,
-      "max_val": 60.0
-    },
-    {
-      "building_function": "non_residential000",
-      "param_name": "occupant_density_m2_per_person",
-      "min_val": 12.0,
-      "max_val": 18.0
-    }
-  ],
-  "epw": [
-    {
-      "building_id": 413673000,
-      "fixed_epw_path": "data/weather/2050.epw"
-    },
-    {
-      "desired_year": 2050,
-      "override_year_to": 2020
-    }
-  ],
-  "mail_user": [
-    {
-      "email": "amin.jalilzade1@gmail.com"
-    }
-  ],
-  "fenestration": [
-    {
-      "building_id": 413673000,
-      "building_function": "residential",
-      "building_type": "Two-and-a-half-story House",
-      "age_range": "1992-2005",
-      "scenario": "scenario1",
-      "param_name": "wwr",
-      "min_val": 0.025,
-      "max_val": 0.03
-    },
-    {
-      "building_function": "non_residential0",
-      "age_range": "2015 and later",
-      "scenario": "scenario1",
-      "param_name": "roof_R_value",
-      "fixed_value": 3.0
-    }
-  ],
-  "geometry": [
-    {
-      "building_id": 413673,
-      "param_name": "perimeter_depth",
-      "min_val": 3.5,
-      "max_val": 4.0,
-      "fixed_value": true
-    },
-    {
-      "building_id": 4136733,
-      "param_name": "has_core",
-      "fixed_value": true
-    },
-    {
-      "building_id": 4136737,
-      "param_name": "has_core",
-      "fixed_value": false
-    },
-    {
-      "building_type": "Meeting Function",
-      "param_name": "has_core",
-      "fixed_value": true
-    },
-    {
-      "building_id": 4136738,
-      "param_name": "has_core",
-      "fixed_value": false
-    }
-
-    
-  ],
-  "hvac": [
-    {
-      "building_id": 413673000,
-      "param_name": "heating_day_setpoint",
-      "min_val": 10.0,
-      "max_val": 11.0
-    },
-    {
-      "building_function": "residential0",
-      "param_name": "cooling_day_setpoint",
-      "fixed_value": 25.6
-    },
-    {
-      "scenario": "scenario10",
-      "age_range": "2015 and later",
-      "param_name": "max_heating_supply_air_temp",
-      "min_val": 48.6,
-      "max_val": 50.0
-    }
-  ],
-  "lighting": [
-    {
-      "building_id": 413673000,
-      "param_name": "lights_wm2",
-      "min_val": 18.0,
-      "max_val": 20.0
-    },
-    {
-      "building_type": "Residential0",
-      "param_name": "tN",
-      "min_val": 10999,
-      "max_val": 11999
-    },
-    {
-      "building_id": 4136731,
-      "building_type": "non_residential",
-      "param_name": "parasitic_wm2",
-      "min_val": 0.28,
-      "max_val": 0.3
-    }
-  ],
   "main_config": {
     "paths": {
       "building_data": "data/df_buildings.csv",
@@ -141,18 +9,33 @@
       "hvac_excel": "excel_data/hvac_overrides.xlsx",
       "vent_excel": "excel_data/vent_overrides.xlsx"
     },
-
-
     "use_database": false,
-      "filter_by": "meestvoorkomendepostcode", 
-      "db_filter": {
-        "meestvoorkomendepostcode": ["3066HG"], 
-        "pand_id": ["0383100000001369", "0383100000001370", "5473VX"],
-        "pand_ids": ["XYZ123", "XYZ999"],
-        "bbox_xy": [120000.0, 487000.0, 121000.0, 488000.0],
-        "bbox_latlon": [51.873, 5.589, 51.878, 5.60]
-
-
+    "filter_by": "meestvoorkomendepostcode",
+    "db_filter": {
+      "meestvoorkomendepostcode": [
+        "3066HG"
+      ],
+      "pand_id": [
+        "0383100000001369",
+        "0383100000001370",
+        "5473VX"
+      ],
+      "pand_ids": [
+        "XYZ123",
+        "XYZ999"
+      ],
+      "bbox_xy": [
+        120000.0,
+        487000.0,
+        121000.0,
+        488000.0
+      ],
+      "bbox_latlon": [
+        51.873,
+        5.589,
+        51.878,
+        5.6
+      ]
     },
     "excel_overrides": {
       "override_fenez_excel": false,
@@ -191,7 +74,7 @@
         "base_output_dir": "Sim_Results",
         "outputs": [
           {
-            "convert_to_daily": true,
+            "convert_to_daily": false,
             "convert_to_monthly": false,
             "aggregator": "none",
             "output_csv": "output/results/merged_as_is.csv"
@@ -227,7 +110,6 @@
         "include_tables": true,
         "include_summary": true
       }
-
     },
     "structuring": {
       "perform_structuring": true,
@@ -251,10 +133,8 @@
       }
     },
     "modification": {
-      "perform_modification": true,
+      "perform_modification": false,
       "modify_config": {
-
-
         "idd_path": "EnergyPlus/Energy+.idd",
         "assigned_csv": {
           "hvac_building": "assigned/assigned_hvac_building.csv",
@@ -273,7 +153,7 @@
           "fenez": "scenarios/scenario_params_fenez.csv"
         },
         "output_idf_dir": "scenario_idfs",
-        "building_id": 4136733,
+        "building_id": 413673000,
         "num_scenarios": 5,
         "picking_method": "random_uniform",
         "picking_scale_factor": 0.5,
@@ -290,9 +170,13 @@
         "perform_validation": false,
         "validation_config": {
           "real_data_csv": "data/mock_merged_daily_mean.csv",
-          "sim_data_csv":  "results/merged_daily_mean.csv",
+          "sim_data_csv": "results/merged_daily_mean.csv",
           "bldg_ranges": {
-            "0": [0, 1, 2]
+            "0": [
+              0,
+              1,
+              2
+            ]
           },
           "variables_to_compare": [
             "Electricity:Facility [J](Hourly)",
@@ -305,55 +189,51 @@
         }
       }
     },
-
-    
-
-
-  "validation_base": {
-    "perform_validation": false,
-    "config": {
-      "real_data_csv": "data/mock_merged_daily_mean.csv",
-      "sim_data_csv":  "results/merged_daily_mean.csv",
-      "bldg_ranges": {
-        "0": [0,1,2,3]
-      },
-      "variables_to_compare": [
-        "Electricity:Facility [J](Hourly)",
-        "Heating:EnergyTransfer [J](Hourly)",
-        "Cooling:EnergyTransfer [J](Hourly)"
-      ],
-      "threshold_cv_rmse": 30.0,
-      "skip_plots": true,
-      "output_csv": "validation_report_base.csv"
-    }
-  },
-
-  "validation_scenarios": {
-    "perform_validation": false,
-    "config": {
-      "real_data_csv": "data/mock_merged_daily_mean.csv",
-      "sim_data_csv":  "results_scenarioes/merged_daily_mean_scenarios.csv",
-      "bldg_ranges": {
-        "0": [0,1,2]
-      },
-      "variables_to_compare": [
-        "Electricity:Facility [J](Hourly)",
-        "Heating:EnergyTransfer [J](Hourly)",
-        "Cooling:EnergyTransfer [J](Hourly)"
-      ],
-      "threshold_cv_rmse": 30.0,
-      "skip_plots": true,
-      "output_csv": "validation_report_scenarios.csv"
-    }
-  },
-
-
-
-
-
-
-
-
+    "validation_base": {
+      "perform_validation": false,
+      "config": {
+        "real_data_csv": "data/mock_merged_daily_mean.csv",
+        "sim_data_csv": "results/merged_daily_mean.csv",
+        "bldg_ranges": {
+          "0": [
+            0,
+            1,
+            2,
+            3
+          ]
+        },
+        "variables_to_compare": [
+          "Electricity:Facility [J](Hourly)",
+          "Heating:EnergyTransfer [J](Hourly)",
+          "Cooling:EnergyTransfer [J](Hourly)"
+        ],
+        "threshold_cv_rmse": 30.0,
+        "skip_plots": true,
+        "output_csv": "validation_report_base.csv"
+      }
+    },
+    "validation_scenarios": {
+      "perform_validation": false,
+      "config": {
+        "real_data_csv": "data/mock_merged_daily_mean.csv",
+        "sim_data_csv": "results_scenarioes/merged_daily_mean_scenarios.csv",
+        "bldg_ranges": {
+          "0": [
+            0,
+            1,
+            2
+          ]
+        },
+        "variables_to_compare": [
+          "Electricity:Facility [J](Hourly)",
+          "Heating:EnergyTransfer [J](Hourly)",
+          "Cooling:EnergyTransfer [J](Hourly)"
+        ],
+        "threshold_cv_rmse": 30.0,
+        "skip_plots": true,
+        "output_csv": "validation_report_scenarios.csv"
+      }
+    },
     "sensitivity": {
       "perform_sensitivity": true,
       "scenario_folder": "scenarios",
@@ -402,48 +282,5 @@
       "best_params_folder": "calibrated",
       "history_folder": "calibrated"
     }
-  },
-  "shading": [
-    {
-      "building_id": 413673000,
-      "param_name": "top_n_buildings",
-      "fixed_value": 5
-    },
-    {
-      "building_function": "residential",
-      "param_name": "summer_value",
-      "min_val": 0.4,
-      "max_val": 0.6
-    },
-    {
-      "param_name": "top_n_trees",
-      "fixed_value": 3
-    }
-  ],
-  "vent": [
-    {
-      "building_id": 413673000,
-      "param_name": "infiltration_base",
-      "min_val": 100.3,
-      "max_val": 100.4
-    },
-    {
-      "building_function": "residential",
-      "age_range": "1992-2005",
-      "param_name": "year_factor",
-      "min_val": 21.4,
-      "max_val": 21.5
-    },
-    {
-      "building_id": 4136731,
-      "param_name": "system_type",
-      "fixed_value": "D"
-    },
-    {
-      "building_id": 4136731,
-      "param_name": "fan_pressure",
-      "min_val": 100,
-      "max_val": 120
-    }
-  ]
+  }
 }
