--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -2,15 +2,29 @@
 
 torch==2.0.1
 torchvision==0.15.2
-pandas==1.3.5
-numpy==1.23.5
-scipy==1.9.3
-scikit-learn==1.2.2
-seaborn==0.12.2
-matplotlib==3.5.2
+pandas>=1.3.5,<3.0.0  # Allow newer versions
+numpy>=1.23.5,<2.0.0
+scipy>=1.9.3,<2.0.0
+scikit-learn>=1.3.0,<2.0.0  # AutoGluon needs >= 1.3.0
+seaborn>=0.12.2
+matplotlib>=3.5.2,<4.0.0
 
 # If you use JupyterLab or Notebook
-jupyterlab==3.4.4
-ipympl==0.9.3
+jupyterlab>=3.4.4
+ipympl>=0.9.3
 
-# Possibly other big libs...
+# Advanced ML libraries
+xgboost>=1.7.0
+lightgbm>=3.3.0
+
+# AutoML frameworks
+# autogluon>=1.0.0
+h2o>=3.40.0
+tpot>=0.11.7
+flaml>=1.2.0
+
+# Multi-objective optimization
+pymoo>=0.6.0
+
+# CMA-ES
+cma>=3.2.0
