--- a/user_configs/f89bc1a7-176a-4f2e-9012-b626392ae859/main_config.json
+++ b/user_configs/f89bc1a7-176a-4f2e-9012-b626392ae859/main_config.json
@@ -117,7 +117,7 @@
       "parse_mode": "all",
       "parse_types": {
         "idf": true,
-        "sql": false
+        "sql": true
       },
       "categories": null,
       "validate_outputs": true,
@@ -130,47 +130,14 @@
         "save_by_building": true
       }
     },
-    "structuring": {
-      "perform_structuring": true,
-      "dhw": {
-        "csv_in": "assigned/assigned_dhw_params.csv",
-        "csv_out": "assigned/structured_dhw_params.csv"
-      },
-      "fenestration": {
-        "csv_in": "assigned/assigned_fenez_params.csv",
-        "csv_out": "assigned/structured_fenez_params.csv"
-      },
-      "hvac": {
-        "csv_in": "assigned/assigned_hvac_params.csv",
-        "build_out": "assigned/assigned_hvac_building.csv",
-        "zone_out": "assigned/assigned_hvac_zones.csv"
-      },
-      "vent": {
-        "csv_in": "assigned/assigned_ventilation.csv",
-        "build_out": "assigned/assigned_vent_building.csv",
-        "zone_out": "assigned/assigned_vent_zones.csv"
-      },
-      "shading": {
-        "csv_in": "assigned/assigned_shading_params.csv",
-        "csv_out": "assigned/structured_shading_params.csv"
-      },
-      "equipment": {
-        "csv_in": "assigned/assigned_equipment.csv",
-        "csv_out": "assigned/structured_equipment.csv"
-      },
-      "zone_sizing": {
-        "csv_in": "assigned/assigned_zone_sizing_outdoor_air.csv",
-        "csv_out": "assigned/structured_zone_sizing.csv"
-      }
-    },
     "modification": {
       "perform_modification": true,
       "base_idf_selection": {
-        "method": "all",
+        "method": "specific",
         "building_ids": [
-          "1"
+          "4136733"
         ],
-        "num_buildings": 1
+        "use_output_idfs": true
       },
       "modification_strategy": {
         "type": "scenarios",
