--- a/user_configs/3cce1ec0-77e8-4121-94dd-6134bd6eff99/main_config.json
+++ b/user_configs/3cce1ec0-77e8-4121-94dd-6134bd6eff99/main_config.json
@@ -644,6 +644,7 @@
           "run_after": "parsing",
           "config": {
             "real_data_path": "data/test_validation_data/measured_data_parsed_format_daily_4136733.csv",
+            "year_agnostic_matching": true,
             "variables_to_validate": [
               "Electricity",
               "Heating",
@@ -683,6 +684,7 @@
           "run_after": "modification_parsing",
           "config": {
             "real_data_path": "data/test_validation_data/measured_data_parsed_format_daily_4136733.csv",
+            "year_agnostic_matching": true,
             "variables_to_validate": [
               "Electricity",
               "Heating",
@@ -716,6 +718,7 @@
           "run_after": "calibration",
           "config": {
             "real_data_path": "data/test_validation_data/measured_data_parsed_format_daily_4136733.csv",
+            "year_agnostic_matching": true,
             "thresholds": {
               "default": {
                 "cvrmse": 15.0,
